--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             color: var(--text-color);
             background-color: var(--primary-bg);
             -webkit-font-smoothing: antialiased;
+            cursor: url("https://cdn.discordapp.com/attachments/1368313410173014016/1418784086604124180/image-removebg-preview.png?ex=68cf6125&is=68ce0fa5&hm=35cfb51b7d1fefac7e24e5eda11b388fc6696d43c4c90847c2ac86393b795642&"), auto;
         }
 
         header {
