--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Twix | Artist</title>
     <style>
         :root {
-            --primary-bg: #fff;
-            --secondary-bg: #f8f8f8;
+            --primary-bg: #e077d8;
+            --secondary-bg: #dc9be0;
             --text-color: #333;
             --accent-color: #e06c75; /* A cherry-like red */
             --font-family-body: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
