--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Twix | Artist</title>
     <style>
         :root {
-            --primary-bg: #e077d8;
-            --secondary-bg: #dc9be0;
-            --text-color: #333;
-            --accent-color: #e06c75; /* A cherry-like red */
+            --primary-bg: #fffaf2;
+            --secondary-bg: #fffaf2;
+            --text-color: #000000;
+            --accent-color: #f5404e; /* A cherry-like red */
             --font-family-body: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
 
